<resources>
    <string name="app_name">Sneaky</string>
    <string name="map_key" translatable="false">AIzaSyB9aX8wtzw4tlwGnC9i9tq0SSIyfsThTto</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up">Register</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
